common-applications/test-environment/ascendai/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ascendai
  name: ascendai
