common-applications/test-environment/ascendai/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: server-ingress
  namespace: ascendai
spec:
  rules:
  - host: ascendai.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: server-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - ascendai.test.osinfra.cn
    secretName: ascendai-osinfra-cn-tls
